Fix comments to pull request