@@ -4,15 +4,14 @@ import by.lawaksoft.tradebot.client.MarketClient;
 import by.lawaksoft.tradebot.dto.model.market.CandlestickDto;
 import by.lawaksoft.tradebot.dto.model.market.TickerDto;
 import by.lawaksoft.tradebot.dto.request.CandlesticksFilterDto;
-import by.lawaksoft.tradebot.dto.response.ResponseCandlestickDto;
-import by.lawaksoft.tradebot.dto.response.ResponseTickerDto;
+import by.lawaksoft.tradebot.dto.response.candlestick.ResponseCandlestickDto;
+import by.lawaksoft.tradebot.dto.response.ticker.ResponseTickerDto;
 import by.lawaksoft.tradebot.mapper.DtoMapper;
 import by.lawaksoft.tradebot.service.market.MarketService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class MarketServiceImpl implements MarketService {
@@ -37,6 +36,6 @@ public class MarketServiceImpl implements MarketService {
 
         ResponseCandlestickDto responseCandlestickDto = marketClient.getCandlesticks(filterDto.getInstId(), filterDto.getBar(), filterDto.getAfter(), filterDto.getBefore(),
                 filterDto.getLimit());
-        return responseCandlestickDto.getCandlesticks().stream().map(DtoMapper::toCandlestickDto).collect(Collectors.toList());
+        return responseCandlestickDto.getCandlesticks().stream().map(DtoMapper::toCandlestickDto).toList();
     }
 }
